# mnt-siqad-plugins

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  quickexact.physeng  quicksim.physeng
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: clang-format.yml  clang-tidy-review-post.yml  clang-tidy-review.yml  macos.yml  release-drafter.yml  ubuntu.yml  windows.yml
cmake/: StandardProjectSettings.cmake
include/: CMakeLists.txt  logger.hpp  quicksim_interface.hpp  siqad_plugin_interface.hpp  timer.hpp
libs/: CMakeLists.txt
plugins/: CMakeLists.txt  README.md
plugins/clustercomplete/: clustercomplete.cpp  clustercomplete.physeng
plugins/quickexact/: quickexact.cpp  quickexact.physeng
plugins/quicksim/: quicksim.cpp  quicksim.physeng
src/: global.cc  global.h  interface.h  interface.hpp  logger.h  logger.hpp  main.cpp  timer.h  timer.hpp
test/: CMakeLists.txt  clustercomplete_problem_0.xml  interface.cpp  quickexact_problem_0.xml  quicksim_interface.cpp  quicksim_problem_0.xml  sim_problem_0.xml  sim_result_0.xml  test.cpp
